[package]
name = "daimon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
bincode = "1.3.3"
ron = "0.8.0"
clap = { version = "4.2.1", features = ["derive"] }
libloading = "0.7.4"
dirs = "5.0.0"
